libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__ListOptionals-Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface ListOptionals {
	optional_strings: (string | null)[];
	optional_integers: (number | null)[];
	optional_arrays: (number[] | null)[];
	optional_sets: (string[] | null)[];
}
