libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__Machine::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface Machine {
	id: MachineId;
	identifier: string;
	roles: RoleId[];
}
