libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__MachineId::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export type MachineId = ActorEntityUuid;
