libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__MapEnumKey::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface MapEnumKey {
	enum_to_string: {
		[key: MapKeyEnum]: string
	};
	enum_to_int: {
		[key: MapKeyEnum]: number
	};
	btree_enum_to_string: {
		[key: MapKeyEnum]: string
	};
}
