libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__MapKeyEnum::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export type MapKeyEnum = "Foo" | "Bar" | "Baz";
