libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__MapNested-Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface MapNested {
	nested_maps: {
		[key: string]: {
			[key: string]: number;
		};
	};
	triple_nested: {
		[key: string]: {
			[key: string]: {
				[key: string]: boolean;
			};
		};
	};
	btree_nested: {
		[key: string]: {
			[key: number]: string;
		};
	};
	mixed_nesting: {
		[key: string]: {
			[key: number]: {
				[key: string]: boolean;
			};
		};
	};
}
