libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__MapNumericKey-Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface MapNumericKey {
	int_to_string: {
		[key: number]: string;
	};
	int_to_int: {
		[key: number]: number;
	};
	btree_int_to_string: {
		[key: number]: string;
	};
	btree_int_to_int: {
		[key: number]: number;
	};
}
